# noetik

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
src/noetik/: common.py  config.py  main.py
src/noetik/agent/: agent_loop.py  planner_interface.py  schema.py  tool_executor.py
src/noetik/api/: app.py  models.py
src/noetik/client/: cli.py  webapp.py
src/noetik/core/: planner.py  schema.py
src/noetik/memory/: memory_store.py  vector_memory.py
src/noetik/tools/: __init__.py  tool_call_parser.py
src/noetik/web/: api.py
tests/: test_tool_executor.py
